--- a/src/components/Searchbox/Searchbox.module.css
+++ b/src/components/Searchbox/Searchbox.module.css
@@ -89,6 +89,11 @@
   min-width: 0;
 }
 
+.input[type="search"] {
+  -webkit-appearance: none;
+  appearance: none;
+}
+
 .input::placeholder {
   color: var(--ui-TextCaption);
 }
@@ -187,8 +192,6 @@
 .variantGhost .control {
   border: none;
   background: transparent;
-  padding: 0;
-  min-height: 0;
 }
 
 .variantGhost .control:hover {
@@ -199,7 +202,7 @@
 .variantGhost .control:focus-within {
   border-color: transparent;
   box-shadow: none;
-  background: var(--ui-ControlHover);
+  background: transparent;
 }
 
 .variantGhost .clearButton {
